Border around "Answers" consistant, without white space, resolves #71.

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body#page-question-type-pmatch #region-main #fgroup_id_updatebuttonar {
     border: none;
 }
 [id^='fitem_id_accuracyborder_'] {
-    border: none !important; /* stylelint-disable-line declaration-no-important */
+    border-top: none !important; /* stylelint-disable-line declaration-no-important */
 }
 
 body#page-question-type-pmatch div#fgroup_id_supsubels label[for*='allowsubscript'],
@@ -237,3 +237,25 @@ body#page-question-type-pmatch-testquestion .resettable {
         top: 0 !important; /* stylelint-disable-line declaration-no-important */
     }
 }
+
+#page-question-type-pmatch div[id^="fitem_id_topborder_"].mb-3,
+#page-question-type-pmatch div[id^="fitem_id_answer_"].mb-3,
+#page-question-type-pmatch div[id^="fitem_id_fraction_"].mb-3,
+#page-question-type-pmatch div[id^="fitem_id_accuracyborder_"].mb-3,
+#page-question-type-pmatch div[id="fitem_id_"].mb-3.otheranswerhdr,
+#page-question-type-pmatch div[id="fitem_id_otherfraction"].mb-3,
+#page-question-type-pmatch div[id="fitem_id_otherfeedback"].mb-3,
+#page-question-type-pmatch div[id^="fitem_id_rule-creator-wrapper_"].mb-3 { 
+    margin-bottom: 0 !important; /* stylelint-disable-line declaration-no-important */
+}
+
+
+#page-question-type-pmatch #id_answerhdr div[id*="fitem_id_addanswers"].fitem.femptylabel {
+  border: none;
+  background: transparent;
+}
+#page-question-type-pmatch div[id^="fitem_id_accuracyborder_"] {
+  border-left: 1px solid #bbb;
+  border-right: 1px solid #bbb;
+}
+
